# avshop

./: CHANGEDLOG  CMakeLists.txt  INSTALL  LICENSE  Makefile  README.txt  build.sh  index.html  run.sh
approot/etc/: avshop.xml  wt_config.xml
approot/var/db/: sample.db
approot/var/www/resources/css/: notusingstyle.css  style.css
approot/var/www/resources/images/notused/: logo.xcf
approot/var/www/resources/images/productimages/: template.xcf
approot/var/www/resources/js/: frontend.js
approot/var/www/resources/js/elevate/: core.js  dobextension.js
approot/var/www/resources/js/jquery/: jquery.innerfade.js
doc/database/: dbModel.mwb  dbModel.mwb.bak  dbModel.sql  dbModel.wb51.mwb
src/: CMakeLists.txt  version.h.in
src/avshop/: ArticleWidget.cpp  ArticleWidget.h  CMakeLists.txt  ForgotPasswordPanel.cpp  ForgotPasswordPanel.h  Main.cpp  NewAccountPanel.cpp  NewAccountPanel.h  ProductListThumbViewWidget.cpp  ProductListThumbViewWidget.h  ProductListWidget.cpp  ProductListWidget.h  ProductMenuItem.cpp  ProductMenuItem.h  ProductWidget.cpp  ProductWidget.h  ShopApplication.cpp  ShopApplication.h
src/avshop/CheckOutPanel/: CheckOutPage.cpp  CheckOutPage.h  CheckOutPanel.cpp  CheckOutPanel.h  CompletedPage.cpp  CompletedPage.h  ConfirmPage.cpp  ConfirmPage.h
src/avshop/Widget/: UserWidget.cpp  UserWidget.h
src/avshopbackend/: CMakeLists.txt
src/avshopbackend/general/: DBTable.cpp  DBTable.h  ShopDb.cpp  ShopDb.h
src/avshopbackend/products/: Contact.cpp  Contact.h  Money.cpp  Money.h  OrderHeader.cpp  OrderHeader.h  OrderHeaders.cpp  OrderHeaders.h  OrderRow.cpp  OrderRow.h  Product.cpp  Product.h  ProductType.cpp  ProductType.h  ProductTypes.cpp  ProductTypes.h  Products.cpp  Products.h
src/avshopbackend/test/: ContactTest.cpp  MainTest.cpp  MoneyTest.cpp  OrderTest.cpp  ProductTest.cpp  ProductTypeTest.cpp  UserTest.cpp
src/avshopbackend/user/: Action.cpp  Action.h  ActionGroup.cpp  ActionGroup.h  Actions.cpp  Actions.h  User.cpp  User.h  UserAccount.cpp  UserAccount.h
src/avshopdbinstall/: CMakeLists.txt  Main.cpp
src/avutils/: AVDebug.cpp  AVDebug.h  AVString.cpp  AVString.h  CMakeLists.txt  Image.cpp  Image.h
src/avutils/test/: AVImageTest.cpp  AVStringTest.cpp
